# Cassabot

./: .dockerignore  .env  .gitignore  AGENCY_OS_SPECIFICATION.md  README.md  bot.py  pyproject.toml  render.yaml  requirements.txt  Бухгалтерия операторы.json
