[tool.poetry]
name = "agencyos-bot"
version = "0.1.0"
description = "Telegram bot for AgencyOS"
authors = ["Dmitrij"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.7"
python-dotenv = "^1.0.1"
pyairtable = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 